cmake_minimum_required(VERSION 3.14)
project(AP_Assignment_1)

set(CMAKE_CXX_STANDARD 14)


#add_executable(AP_Assignment_1 "task 2a.cpp")

#add_executable(AP_Assignment_1 "task 2b.cpp")

#add_executable(AP_Assignment_1 "task 3.cpp")

add_executable(AP_Assignment_1 "task 4.cpp")

#add_executable(AP_Assignment_1 "task 1.cpp")